--- a/public/style.css
+++ b/public/style.css
@@ -22,15 +22,37 @@
   }
 }
 
+::-webkit-scrollbar {
+  width: 0.1em;
+}
+
+::-webkit-scrollbar-track {
+  background: black;
+}
+
+::-webkit-scrollbar-thumb {
+  background: blue;
+}
+
 body {
   display: flex;
   flex-flow: column nowrap;
+  justify-content: center;
   align-items: center;
   width: 100vw;
   height: 100vh;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 20px;
+  font-size: 25px;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  color: white;
+  background: black;
+}
+
+mark {
+  color: white;
+  background: blue;
 }
 
 p {
@@ -42,17 +64,46 @@ p {
 }
 
 #app {
-  width: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  /* filter: invert(100); */
 }
 
 #chat {
   width: 100%;
+  max-width: 60vw;
+  box-shadow: 0 0 6em rgba(0, 0, 255, 1);
+  border-radius: 15px;
+  overflow: overlay;
 }
 
 #bubbles {
-  height: 50vh;
-  overflow-y: scroll;
+  height: 60vh;
+  background: black;
   overflow-x: hidden;
+}
+
+#ui {
+  margin: 1em 0 0 0;
+}
+
+#ui button {
+  padding: 0.75em 1em;
+  font-size: 0.6em;
+  color: white;
+  background: black;
+  border: 0;
+  border-radius: 100px;
+  transition: all 1000ms;
+  cursor: pointer;
+}
+
+#ui button:hover {
+  background: blue;
 }
 
 .bubble-container {
@@ -70,13 +121,16 @@ p {
 .bubble {
   width: 100%;
   padding: 1em;
-  border: 1px solid rgba(0, 0, 50, 0.1);
+  color: white;
+  border: 1px solid rgba(0, 0, 255, 1);
+  border-radius: 100px;
 }
 
 .bubble.self {
   text-align: right;
   color: white;
-  background: black;
+  background: rgba(0, 0, 255, 1);
+  border: 0;
 }
 
 .bubble .username {
@@ -89,7 +143,7 @@ p {
 }
 
 .bubble .timestamp {
-  font-size: 0.7em;
+  font-size: 0.6em;
   text-align: right;
   opacity: 0.4;
 }
@@ -104,7 +158,8 @@ p {
   padding: 0.5em;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 1em;
-  color: black;
+  color: white;
+  background: black;
   border: 0;
   resize: none;
 }
@@ -117,13 +172,20 @@ p {
   width: 100%;
   padding: 1em;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 1em;
+  font-size: 0.8em;
+  text-transform: uppercase;
   color: white;
   background: rgba(0, 0, 0, 1);
   border: 0;
+  cursor: pointer;
+  transition: all 1000ms;
 }
 
-#button-send:focus {
+#button-send:hover {
+  background: rgba(0, 0, 255, 1);
+}
+
+#ui button, #button-send:focus {
   outline: 0;
 }
 
@@ -131,7 +193,19 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
-  height: 100vh;
   text-align: center;
+}
+
+@media (max-width: 375px) {
+  body {
+    font-size: 20px;
+  }
+
+  #app {
+    justify-content: initial;
+  }
+
+  #chat {
+    max-width: none;
+  }
 }
